--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "angular-bootstrap-scrolling-tabs",
-  "version": "0.3.2",
+  "version": "1.0.0",
+  "main": "dist/scrolling-tabs.js",
   "description": "Angular directive for scrollable Bootstrap Tabs",
   "homepage": "https://github.com/mikejacobson/angular-bootstrap-scrolling-tabs",
   "bugs": "https://github.com/mikejacobson/angular-bootstrap-scrolling-tabs/issues",
@@ -29,5 +30,27 @@
     "tabs",
     "scrolling",
     "scrollable"
-  ]
+  ],
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^7.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.0.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-eslint": "^3.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.1.2",
+    "yargs": "^8.0.1"
+  },
+  "scripts": {
+    "build": "gulp",
+    "lint": "gulp lint",
+    "prepublish": "yarn build"
+  }
 }
